# PlaylistPulse

./: .gitattributes  .gitignore  PlaylistPulse_Model_Training.ipynb  README.md  cleaned_lyrics_data.csv  deployed_recommender.py  lyrics_embeddings_cache.pkl  main.py  model.pth  model_weights.pth  preprocessor.pkl  pyproject.toml
song-recommender-frontend/: package-lock.json  package.json  tailwind.config.js
song-recommender-frontend/src/: App.js  index.css
song-recommender-frontend/src/components/: Footer.js  Header.js  RecommendationsList.js  SearchBar.js
song-recommender-frontend/src/context/: MusicContext.js
